fixed img width height

--- a/index.html
+++ b/index.html
@@ -81,24 +81,24 @@
               <div class="img-container">
                 <div class="img-box">
                   <img
-                    width="370px"
-                    height="294px"
+                    width="370"
+                    height="294"
                     src="./public/eff34a388bbc6409758a002e5a58c3ca.jpg"
                     alt="Веб-сайт"
                   />
                 </div>
                 <div class="img-box">
                   <img
-                    width="370px"
-                    height="294px"
+                    width="370"
+                    height="294"
                     src="./public/fe209b7db875477ca0f844823574082d.jpg"
                     alt="Додатки"
                   />
                 </div>
                 <div class="img-box">
                   <img
-                    width="370px"
-                    height="294px"
+                    width="370"
+                    height="294"
                     src="./public/ff490664ba91f138b9f708e01d65306a%20(1).jpg"
                     alt="Дизайн"
                   />
@@ -114,8 +114,8 @@
               <div class="team-box">
                 <div class="team-img-box">
                   <img
-                    width="270px"
-                    height="260px"
+                    width="270"
+                    height="260"
                     src="./public/img.jpg"
                     alt="Ігор Дем'яненко"
                   />
@@ -128,8 +128,8 @@
               <div class="team-box">
                 <div class="team-img-box">
                   <img
-                    width="270px"
-                    height="260px"
+                    width="270"
+                    height="260"
                     src="./public/img%20(1).jpg"
                     alt="Ольга Рєпіна"
                   />
@@ -142,8 +142,8 @@
               <div class="team-box">
                 <div class="team-img-box">
                   <img
-                    width="270px"
-                    height="260px"
+                    width="270"
+                    height="260"
                     src="./public/img%20(2).jpg"
                     alt="Микола Тарасов"
                   />
@@ -156,8 +156,8 @@
               <div class="team-box">
                 <div class="team-img-box">
                   <img
-                    width="270px"
-                    height="260px"
+                    width="270"
+                    height="260"
                     src="./public/img%20(3).jpg"
                     alt="Михайло Єрмаков"
                   />
