--- a/index.html
+++ b/index.html
@@ -4,82 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="styles.css" />
     <title>Studio</title>
   </head>
-  <body class="custom-scroll">
-    <div class="page">
+  <body>
+    <div>
       <header>
-        <div class="hdr-container">
-          <div class="header-left">
-            <div class="logo-text">
+        <div>
+          <div>
+            <div>
               <span>Web</span>
               <span>Studio</span>
             </div>
-            <nav class="navigation">
-              <ul class="nav-ul">
+            <nav>
+              <ul>
                 <li>Студія</li>
                 <li>Портфоліо</li>
                 <li>Контакти</li>
               </ul>
             </nav>
           </div>
-          <div class="header-right">
-            <div class="nav-addr">
-              <a href="mailto:info@devstudio.com" class="email"
-                >info@devstudio.com</a
-              >
+          <div>
+            <div>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
               <a href="tel:+380961111111">+380961111111</a>
             </div>
           </div>
         </div>
       </header>
       <main>
-        <section class="bnr">
-          <div class="bnr-container">
-            <div class="inner-bnr">
-              <div class="bnr-content">
-                <h1 class="bnr-text">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-                <button type="button" class="order-btn">
-                  <span>Замовити послугу</span>
-                </button>
-              </div>
-            </div>
-          </div>
+        <section>
+          <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ <br />ВАШОГО БІЗНЕСУ</h1>
+          <button type="button">Замовити послугу</button>
         </section>
-        <section class="intro">
-          <div class="intro-container">
-            <div class="box-intro">
+        <section>
+          <div>
+            <div>
               <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
               <p>
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </div>
-            <div class="box-intro">
+            <div>
               <h3>ПУНКТУАЛЬНІСТЬ</h3>
               <p>
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </div>
-            <div class="box-intro">
+            <div>
               <h3>ПЛАНУВАННЯ</h3>
               <p>
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </div>
-            <div class="box-intro">
+            <div>
               <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p>
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
             </div>
-            <div class="intro-gallery">
+            <div>
               <h3>Чим ми займаємося</h3>
-              <div class="img-container">
-                <div class="img-box">
+              <div>
+                <div>
                   <img
                     width="370"
                     height="294"
@@ -87,7 +76,7 @@
                     alt="Веб-сайт"
                   />
                 </div>
-                <div class="img-box">
+                <div>
                   <img
                     width="370"
                     height="294"
@@ -95,7 +84,7 @@
                     alt="Додатки"
                   />
                 </div>
-                <div class="img-box">
+                <div>
                   <img
                     width="370"
                     height="294"
@@ -107,12 +96,12 @@
             </div>
           </div>
         </section>
-        <section class="team-section">
-          <div class="team-container">
+        <section>
+          <div>
             <h3>Наша команда</h3>
-            <div class="team-intro">
-              <div class="team-box">
-                <div class="team-img-box">
+            <div>
+              <div>
+                <div>
                   <img
                     width="270"
                     height="260"
@@ -120,13 +109,13 @@
                     alt="Ігор Дем'яненко"
                   />
                 </div>
-                <div class="team-person">
-                  <h3 class="team-name">Ігор Дем'яненко</h3>
-                  <p class="team-role">Product Designer</p>
+                <div>
+                  <h3>Ігор Дем'яненко</h3>
+                  <p>Product Designer</p>
                 </div>
               </div>
-              <div class="team-box">
-                <div class="team-img-box">
+              <div>
+                <div>
                   <img
                     width="270"
                     height="260"
@@ -134,13 +123,13 @@
                     alt="Ольга Рєпіна"
                   />
                 </div>
-                <div class="team-person">
-                  <h3 class="team-name">Ольга Рєпіна</h3>
-                  <p class="team-role">Frontend Developer</p>
+                <div>
+                  <h3>Ольга Рєпіна</h3>
+                  <p>Frontend Developer</p>
                 </div>
               </div>
-              <div class="team-box">
-                <div class="team-img-box">
+              <div>
+                <div>
                   <img
                     width="270"
                     height="260"
@@ -148,13 +137,13 @@
                     alt="Микола Тарасов"
                   />
                 </div>
-                <div class="team-person">
-                  <h3 class="team-name">Микола Тарасов</h3>
-                  <p class="team-role">Marketing</p>
+                <div>
+                  <h3>Микола Тарасов</h3>
+                  <p>Marketing</p>
                 </div>
               </div>
-              <div class="team-box">
-                <div class="team-img-box">
+              <div>
+                <div>
                   <img
                     width="270"
                     height="260"
@@ -162,9 +151,9 @@
                     alt="Михайло Єрмаков"
                   />
                 </div>
-                <div class="team-person">
-                  <h3 class="team-name">Михайло Єрмаков</h3>
-                  <p class="team-role">UI Designer</p>
+                <div>
+                  <h3>Михайло Єрмаков</h3>
+                  <p>UI Designer</p>
                 </div>
               </div>
             </div>
@@ -172,16 +161,16 @@
         </section>
       </main>
       <footer>
-        <div class="footer-container">
-          <div class="logo-sct">
-            <div class="logo-text">
+        <div>
+          <div>
+            <div>
               <span>Web</span>
-              <span class="span-studio">Studio</span>
+              <span>Studio</span>
             </div>
-            <address class="addr-sct">
-              <span>Address: 1234 Elm Street, Springfield, IL, USA</span>
-              <a href="mailto:example@example.com">example@example.com</a>
-              <a href="tel:+1234567890">+1 (234) 567-890</a>
+            <address>
+              <span>м. Київ, пр-т Лесі Українки, 26</span>
+              <a href="mailto:example@example.com">info@devstudio.com</a>
+              <a href="tel:+1234567890">+38 096 111 11 11</a>
             </address>
           </div>
         </div>
