--- a/index.html
+++ b/index.html
@@ -36,16 +36,11 @@
       </header>
       <main>
         <section class="bnr">
-          <div class="bnr-container">
-            <div class="inner-bnr">
-              <div class="bnr-content">
-                <h1 class="bnr-text">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-                <button type="button" class="order-btn">
-                  <span>Замовити послугу</span>
-                </button>
-              </div>
-            </div>
-          </div>
+          <h1 class="bnr-text">
+            ЕФЕКТИВНІ РІШЕННЯ ДЛЯ <br />
+            ВАШОГО БІЗНЕСУ
+          </h1>
+          <button type="button" class="order-btn">Замовити послугу</button>
         </section>
         <section class="intro">
           <div class="intro-container">
@@ -179,9 +174,9 @@
               <span class="span-studio">Studio</span>
             </div>
             <address class="addr-sct">
-              <span>Address: 1234 Elm Street, Springfield, IL, USA</span>
-              <a href="mailto:example@example.com">example@example.com</a>
-              <a href="tel:+1234567890">+1 (234) 567-890</a>
+              <span>м. Київ, пр-т Лесі Українки, 26</span>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a href="tel:+380961111111">+38 096 111 11 11</a>
             </address>
           </div>
         </div>
