--- a/portfolio.html
+++ b/portfolio.html
@@ -183,9 +183,9 @@
               <span class="span-studio">Studio</span>
             </div>
             <address class="addr-sct">
-              <span>Address: 1234 Elm Street, Springfield, IL, USA</span>
-              <a href="mailto:example@example.com">example@example.com</a>
-              <a href="tel:+1234567890">+1 (234) 567-890</a>
+              <span>м. Київ, пр-т Лесі Українки, 26</span>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a href="tel:+380961111111">+38 096 111 11 11</a>
             </address>
           </div>
         </div>
