--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles.css" />
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="custom-scroll">
     <div class="page">
@@ -35,18 +45,26 @@
         </div>
       </header>
       <main>
-        <div class="main-container">
-          <div class="slct">
-            <ul class="slct-ul">
-              <li>Усі</li>
-              <li>Веб-сайти</li>
-              <li>Додатки</li>
-              <li>Дизайн</li>
-              <li>Маркетинг</li>
-            </ul>
-          </div>
-          <div class="portfolio-container">
-            <div class="portfolio-box">
+        <section class="main-container">
+          <ul class="filter-buttons">
+            <li>
+              <button class="filter-button">Всі</button>
+            </li>
+            <li>
+              <button class="filter-button">Веб-сайт</button>
+            </li>
+            <li>
+              <button class="filter-button">Додаток</button>
+            </li>
+            <li>
+              <button class="filter-button">Дизайн</button>
+            </li>
+            <li>
+              <button class="filter-button">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="portfolio-container">
+            <li class="portfolio-box">
               <div class="img-portfolio">
                 <img
                   width="370"
@@ -59,8 +77,8 @@
                 <h3>Технокряк</h3>
                 <p>Веб-сайт</p>
               </div>
-            </div>
-            <div class="portfolio-box">
+            </li>
+            <li class="portfolio-box">
               <div class="img-portfolio">
                 <img
                   width="370"
@@ -73,8 +91,8 @@
                 <h3>Ресторан Seafood</h3>
                 <p>Додаток</p>
               </div>
-            </div>
-            <div class="portfolio-box">
+            </li>
+            <li class="portfolio-box">
               <div class="img-portfolio">
                 <img
                   width="370"
@@ -87,8 +105,8 @@
                 <h3>Постер New Orlean vs Golden Star</h3>
                 <p>Дизайн</p>
               </div>
-            </div>
-            <div class="portfolio-box">
+            </li>
+            <li class="portfolio-box">
               <div class="img-portfolio">
                 <img
                   width="370"
@@ -101,8 +119,8 @@
                 <h3>Проєкт Prime</h3>
                 <p>Маркетинг</p>
               </div>
-            </div>
-            <div class="portfolio-box">
+            </li>
+            <li class="portfolio-box">
               <div class="img-portfolio">
                 <img
                   width="370"
@@ -115,8 +133,8 @@
                 <h3>Проєкт Boxes</h3>
                 <p>Додаток</p>
               </div>
-            </div>
-            <div class="portfolio-box">
+            </li>
+            <li class="portfolio-box">
               <div class="img-portfolio">
                 <img
                   width="370"
@@ -129,8 +147,8 @@
                 <h3>Inspiration has no Borders</h3>
                 <p>Веб-сайт</p>
               </div>
-            </div>
-            <div class="portfolio-box">
+            </li>
+            <li class="portfolio-box">
               <div class="img-portfolio">
                 <img
                   width="370"
@@ -143,8 +161,8 @@
                 <h3>Видання Limited Edition</h3>
                 <p>Дизайн</p>
               </div>
-            </div>
-            <div class="portfolio-box">
+            </li>
+            <li class="portfolio-box">
               <div class="img-portfolio">
                 <img
                   width="370"
@@ -157,8 +175,8 @@
                 <h3>Проєкт LAB</h3>
                 <p>Маркетинг</p>
               </div>
-            </div>
-            <div class="portfolio-box">
+            </li>
+            <li class="portfolio-box">
               <div class="img-portfolio">
                 <img
                   width="370"
@@ -171,9 +189,9 @@
                 <h3>Growing Business</h3>
                 <p>Додаток</p>
               </div>
-            </div>
-          </div>
-        </div>
+            </li>
+          </ul>
+        </section>
       </main>
       <footer>
         <div class="footer-container">
