fixed requested changesd

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <div class="logo-sct">
             <div class="logo-text">
               <span>Web</span>
-              <span id="span-studio">Studio</span>
+              <span class="span-studio">Studio</span>
             </div>
             <address class="addr-sct">
               <span>м. Київ, пр-т Лесі Українки, 26</span>
