--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body class="custom-scroll">
     <div class="page">
-      <!--  -->
+      <!-- INDEX -->
       <header>
         <div class="container">
           <div class="header-left">
