--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,10 @@
       <header>
         <div class="container">
           <div class="header-left">
-            <div class="logo-text">
+            <a href="./index.html" class="logo-text">
               <span>Web</span>
               <span>Studio</span>
-            </div>
+            </a>
             <nav class="navigation">
               <ul class="nav-ul">
                 <li><a href="./index.html">Студія</a></li>
@@ -202,12 +202,12 @@
               <span>Web</span>
               <span class="span-studio">Studio</span>
             </div>
-            <address class="addr-sct">
-              <span>м. Київ, пр-т Лесі Українки, 26</span>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-              <a href="tel:+380961111111">+38 096 111 11 11</a>
-            </address>
           </div>
+          <address class="addr-sct">
+            <span>м. Київ, пр-т Лесі Українки, 26</span>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </address>
         </div>
       </footer>
     </div>
