--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </head>
   <body class="custom-scroll">
     <div class="page">
+      <!-- INDEX -->
       <header>
         <div class="container">
           <div class="header-left">
