--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
@@ -36,10 +40,20 @@
           </div>
           <div class="header-right">
             <div class="nav-addr">
-              <a href="mailto:info@devstudio.com" class="email"
-                >info@devstudio.com</a
-              >
-              <a href="tel:+380961111111">+380961111111</a>
+              <div class="addr">
+                <svg class="icon icon-email">
+                  <use xlink:href="images/icons.svg#icon-email"></use>
+                </svg>
+                <a href="mailto:info@devstudio.com" class="email"
+                  >info@devstudio.com</a
+                >
+              </div>
+              <div class="addr">
+                <svg class="icon icon-smartphone">
+                  <use xlink:href="images/icons.svg#icon-smartphone"></use>
+                </svg>
+                <a href="tel:+380961111111">+380961111111</a>
+              </div>
             </div>
           </div>
         </div>
@@ -70,7 +84,7 @@
                   <img
                     width="370"
                     height="294"
-                    src="public/portfolio1.png"
+                    src="images/portfolio1.png"
                     alt="Веб-сайт"
                   />
                 </div>
@@ -84,7 +98,7 @@
                   <img
                     width="370"
                     height="294"
-                    src="public/portfolio2.png"
+                    src="images/portfolio2.png"
                     alt="Додаток"
                   />
                 </div>
@@ -98,7 +112,7 @@
                   <img
                     width="370"
                     height="294"
-                    src="public/portfolio3.png"
+                    src="images/portfolio3.png"
                     alt="Дизайн"
                   />
                 </div>
@@ -112,7 +126,7 @@
                   <img
                     width="370"
                     height="294"
-                    src="public/portfolio4.png"
+                    src="images/portfolio4.png"
                     alt="Маркетинг"
                   />
                 </div>
@@ -126,7 +140,7 @@
                   <img
                     width="370"
                     height="294"
-                    src="public/portfolio5.png"
+                    src="images/portfolio5.png"
                     alt="Додаток"
                   />
                 </div>
@@ -140,7 +154,7 @@
                   <img
                     width="370"
                     height="294"
-                    src="public/portfolio6.png"
+                    src="images/portfolio6.png"
                     alt="Веб-сайт"
                   />
                 </div>
@@ -154,7 +168,7 @@
                   <img
                     width="370"
                     height="294"
-                    src="public/portfolio7.png"
+                    src="images/portfolio7.png"
                     alt="Дизайн"
                   />
                 </div>
@@ -168,7 +182,7 @@
                   <img
                     width="370"
                     height="294"
-                    src="public/portfolio8.png"
+                    src="images/portfolio8.png"
                     alt="Маркетинг"
                   />
                 </div>
@@ -182,7 +196,7 @@
                   <img
                     width="370"
                     height="294"
-                    src="public/portfolio9.png"
+                    src="images/portfolio9.png"
                     alt="Додаток"
                   />
                 </div>
@@ -202,12 +216,37 @@
               <span>Web</span>
               <span class="span-studio">Studio</span>
             </div>
+            <address class="addr-sct">
+              <span>м. Київ, пр-т Лесі Українки, 26</span>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </address>
           </div>
-          <address class="addr-sct">
-            <span>м. Київ, пр-т Лесі Українки, 26</span>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-          </address>
+          <div class="pre-social">
+            <h3>Приєднуйтесь</h3>
+            <ul class="footer-social">
+              <li>
+                <svg class="icon icon-instagram">
+                  <use xlink:href="images/icons.svg#icon-instagram"></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="icon icon-x">
+                  <use xlink:href="images/icons.svg#icon-x"></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="icon icon-facebook">
+                  <use xlink:href="images/icons.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li>
+                <svg class="icon icon-linkedin">
+                  <use xlink:href="images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
         </div>
       </footer>
     </div>
