changed all the requests

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             </div>
             <nav class="navigation">
               <ul class="nav-ul">
-                <li>
+                <li class="nav-li">
                   <a class="active" href="./index.html">Студія</a>
                 </li>
-                <li><a href="./portfolio.html">Портфоліо</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li class="nav-li"><a href="./portfolio.html">Портфоліо</a></li>
+                <li class="nav-li"><a href="#">Контакти</a></li>
               </ul>
             </nav>
           </div>
@@ -128,24 +128,24 @@
             <div class="img-container">
               <div class="img-box">
                 <img
-                  width="370px"
-                  height="294px"
+                  width="370"
+                  height="294"
                   src="./images/eff34a388bbc6409758a002e5a58c3ca.jpg"
                   alt="Веб-сайт"
                 />
               </div>
               <div class="img-box">
                 <img
-                  width="370px"
-                  height="294px"
+                  width="370"
+                  height="294"
                   src="./images/fe209b7db875477ca0f844823574082d.jpg"
                   alt="Додатки"
                 />
               </div>
               <div class="img-box">
                 <img
-                  width="370px"
-                  height="294px"
+                  width="370"
+                  height="294"
                   src="./images/ff490664ba91f138b9f708e01d65306a%20(1).jpg"
                   alt="Дизайн"
                 />
@@ -160,8 +160,8 @@
               <div class="team-box">
                 <div class="team-img-box">
                   <img
-                    width="270px"
-                    height="260px"
+                    width="270"
+                    height="260"
                     src="./images/img.jpg"
                     alt="Ігор Дем'яненко"
                   />
@@ -170,25 +170,39 @@
                   <h3 class="team-name">Ігор Дем'яненко</h3>
                   <p class="team-role">Product Designer</p>
                   <ul class="team-social">
-                    <li>
-                      <svg class="icon icon-instagram">
-                        <use xlink:href="images/icons.svg#icon-instagram"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.instagram.com" target="_blank">
+                        <svg class="icon icon-instagram">
+                          <use
+                            xlink:href="images/icons.svg#icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li>
-                      <svg class="icon icon-x">
-                        <use xlink:href="images/icons.svg#icon-x"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.x.com" target="_blank">
+                        <svg class="icon icon-x">
+                          <use xlink:href="images/icons.svg#icon-x"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li>
-                      <svg class="icon icon-facebook">
-                        <use xlink:href="images/icons.svg#icon-facebook"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.facebook.com" target="_blank">
+                        <svg class="icon icon-facebook">
+                          <use
+                            xlink:href="images/icons.svg#icon-facebook"
+                          ></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li>
-                      <svg class="icon icon-linkedin">
-                        <use xlink:href="images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.linkedin.com" target="_blank">
+                        <svg class="icon icon-linkedin">
+                          <use
+                            xlink:href="images/icons.svg#icon-linkedin"
+                          ></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -196,8 +210,8 @@
               <div class="team-box">
                 <div class="team-img-box">
                   <img
-                    width="270px"
-                    height="260px"
+                    width="270"
+                    height="260"
                     src="./images/img%20(1).jpg"
                     alt="Ольга Рєпіна"
                   />
@@ -206,25 +220,39 @@
                   <h3 class="team-name">Ольга Рєпіна</h3>
                   <p class="team-role">Frontend Developer</p>
                   <ul class="team-social">
-                    <li>
-                      <svg class="icon icon-instagram">
-                        <use xlink:href="images/icons.svg#icon-instagram"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.instagram.com" target="_blank">
+                        <svg class="icon icon-instagram">
+                          <use
+                            xlink:href="images/icons.svg#icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li>
-                      <svg class="icon icon-x">
-                        <use xlink:href="images/icons.svg#icon-x"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.x.com" target="_blank">
+                        <svg class="icon icon-x">
+                          <use xlink:href="images/icons.svg#icon-x"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li>
-                      <svg class="icon icon-facebook">
-                        <use xlink:href="images/icons.svg#icon-facebook"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.facebook.com" target="_blank">
+                        <svg class="icon icon-facebook">
+                          <use
+                            xlink:href="images/icons.svg#icon-facebook"
+                          ></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li>
-                      <svg class="icon icon-linkedin">
-                        <use xlink:href="images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.linkedin.com" target="_blank">
+                        <svg class="icon icon-linkedin">
+                          <use
+                            xlink:href="images/icons.svg#icon-linkedin"
+                          ></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -232,8 +260,8 @@
               <div class="team-box">
                 <div class="team-img-box">
                   <img
-                    width="270px"
-                    height="260px"
+                    width="270"
+                    height="260"
                     src="./images/img%20(2).jpg"
                     alt="Микола Тарасов"
                   />
@@ -242,25 +270,39 @@
                   <h3 class="team-name">Микола Тарасов</h3>
                   <p class="team-role">Marketing</p>
                   <ul class="team-social">
-                    <li>
-                      <svg class="icon icon-instagram">
-                        <use xlink:href="images/icons.svg#icon-instagram"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.instagram.com" target="_blank">
+                        <svg class="icon icon-instagram">
+                          <use
+                            xlink:href="images/icons.svg#icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li>
-                      <svg class="icon icon-x">
-                        <use xlink:href="images/icons.svg#icon-x"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.x.com" target="_blank">
+                        <svg class="icon icon-x">
+                          <use xlink:href="images/icons.svg#icon-x"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li>
-                      <svg class="icon icon-facebook">
-                        <use xlink:href="images/icons.svg#icon-facebook"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.facebook.com" target="_blank">
+                        <svg class="icon icon-facebook">
+                          <use
+                            xlink:href="images/icons.svg#icon-facebook"
+                          ></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li>
-                      <svg class="icon icon-linkedin">
-                        <use xlink:href="images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.linkedin.com" target="_blank">
+                        <svg class="icon icon-linkedin">
+                          <use
+                            xlink:href="images/icons.svg#icon-linkedin"
+                          ></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -268,8 +310,8 @@
               <div class="team-box">
                 <div class="team-img-box">
                   <img
-                    width="270px"
-                    height="260px"
+                    width="270"
+                    height="260"
                     src="./images/img%20(3).jpg"
                     alt="Михайло Єрмаков"
                   />
@@ -278,25 +320,39 @@
                   <h3 class="team-name">Михайло Єрмаков</h3>
                   <p class="team-role">UI Designer</p>
                   <ul class="team-social">
-                    <li>
-                      <svg class="icon icon-instagram">
-                        <use xlink:href="images/icons.svg#icon-instagram"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.instagram.com" target="_blank">
+                        <svg class="icon icon-instagram">
+                          <use
+                            xlink:href="images/icons.svg#icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li>
-                      <svg class="icon icon-x">
-                        <use xlink:href="images/icons.svg#icon-x"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.x.com" target="_blank">
+                        <svg class="icon icon-x">
+                          <use xlink:href="images/icons.svg#icon-x"></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li>
-                      <svg class="icon icon-facebook">
-                        <use xlink:href="images/icons.svg#icon-facebook"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.facebook.com" target="_blank">
+                        <svg class="icon icon-facebook">
+                          <use
+                            xlink:href="images/icons.svg#icon-facebook"
+                          ></use>
+                        </svg>
+                      </a>
                     </li>
-                    <li>
-                      <svg class="icon icon-linkedin">
-                        <use xlink:href="images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                    <li class="team-social-link">
+                      <a href="https://www.linkedin.com" target="_blank">
+                        <svg class="icon icon-linkedin">
+                          <use
+                            xlink:href="images/icons.svg#icon-linkedin"
+                          ></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -358,25 +414,33 @@
           <div class="pre-social">
             <h3>Приєднуйтесь</h3>
             <ul class="footer-social">
-              <li>
-                <svg class="icon icon-instagram">
-                  <use xlink:href="images/icons.svg#icon-instagram"></use>
-                </svg>
+              <li class="footer-social-link">
+                <a href="https://www.instagram.com" target="_blank">
+                  <svg class="icon icon-instagram">
+                    <use xlink:href="images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <svg class="icon icon-x">
-                  <use xlink:href="images/icons.svg#icon-x"></use>
-                </svg>
+              <li class="footer-social-link">
+                <a href="https://www.x.com" target="_blank">
+                  <svg class="icon icon-x">
+                    <use xlink:href="images/icons.svg#icon-x"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <svg class="icon icon-facebook">
-                  <use xlink:href="images/icons.svg#icon-facebook"></use>
-                </svg>
+              <li class="footer-social-link">
+                <a href="https://www.facebook.com" target="_blank">
+                  <svg class="icon icon-facebook">
+                    <use xlink:href="images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <svg class="icon icon-linkedin">
-                  <use xlink:href="images/icons.svg#icon-linkedin"></use>
-                </svg>
+              <li class="footer-social-link">
+                <a href="https://www.linkedin.com" target="_blank">
+                  <svg class="icon icon-linkedin">
+                    <use xlink:href="images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
