--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,13 @@
             </a>
             <nav class="navigation">
               <ul class="nav-ul">
-                <li><a href="./index.html">Студія</a></li>
-                <li><a class="active" href="./portfolio.html">Портфоліо</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li class="nav-li">
+                  <a href="./index.html">Студія</a>
+                </li>
+                <li class="nav-li">
+                  <a class="active" href="./portfolio.html">Портфоліо</a>
+                </li>
+                <li class="nav-li"><a href="#">Контакти</a></li>
               </ul>
             </nav>
           </div>
@@ -87,6 +91,14 @@
                     src="images/portfolio1.png"
                     alt="Веб-сайт"
                   />
+                  <div class="back-card">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="intro-portfolio">
                   <h3>Технокряк</h3>
@@ -101,6 +113,14 @@
                     src="images/portfolio2.png"
                     alt="Додаток"
                   />
+                  <div class="back-card">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="intro-portfolio">
                   <h3>Ресторан Seafood</h3>
@@ -115,6 +135,14 @@
                     src="images/portfolio3.png"
                     alt="Дизайн"
                   />
+                  <div class="back-card">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="intro-portfolio">
                   <h3>Постер New Orlean vs Golden Star</h3>
@@ -129,6 +157,14 @@
                     src="images/portfolio4.png"
                     alt="Маркетинг"
                   />
+                  <div class="back-card">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="intro-portfolio">
                   <h3>Проєкт Prime</h3>
@@ -143,6 +179,14 @@
                     src="images/portfolio5.png"
                     alt="Додаток"
                   />
+                  <div class="back-card">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="intro-portfolio">
                   <h3>Проєкт Boxes</h3>
@@ -157,6 +201,14 @@
                     src="images/portfolio6.png"
                     alt="Веб-сайт"
                   />
+                  <div class="back-card">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="intro-portfolio">
                   <h3>Inspiration has no Borders</h3>
@@ -171,6 +223,14 @@
                     src="images/portfolio7.png"
                     alt="Дизайн"
                   />
+                  <div class="back-card">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="intro-portfolio">
                   <h3>Видання Limited Edition</h3>
@@ -185,6 +245,14 @@
                     src="images/portfolio8.png"
                     alt="Маркетинг"
                   />
+                  <div class="back-card">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="intro-portfolio">
                   <h3>Проєкт LAB</h3>
@@ -199,6 +267,14 @@
                     src="images/portfolio9.png"
                     alt="Додаток"
                   />
+                  <div class="back-card">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="intro-portfolio">
                   <h3>Growing Business</h3>
@@ -225,27 +301,52 @@
           <div class="pre-social">
             <h3>Приєднуйтесь</h3>
             <ul class="footer-social">
-              <li>
-                <svg class="icon icon-instagram">
-                  <use xlink:href="images/icons.svg#icon-instagram"></use>
-                </svg>
+              <li class="footer-social-link">
+                <a href="https://www.instagram.com" target="_blank">
+                  <svg class="icon icon-instagram">
+                    <use xlink:href="images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <svg class="icon icon-x">
-                  <use xlink:href="images/icons.svg#icon-x"></use>
-                </svg>
+              <li class="footer-social-link">
+                <a href="https://www.x.com" target="_blank">
+                  <svg class="icon icon-x">
+                    <use xlink:href="images/icons.svg#icon-x"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <svg class="icon icon-facebook">
-                  <use xlink:href="images/icons.svg#icon-facebook"></use>
-                </svg>
+              <li class="footer-social-link">
+                <a href="https://www.facebook.com" target="_blank">
+                  <svg class="icon icon-facebook">
+                    <use xlink:href="images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <svg class="icon icon-linkedin">
-                  <use xlink:href="images/icons.svg#icon-linkedin"></use>
-                </svg>
+              <li class="footer-social-link">
+                <a href="https://www.linkedin.com" target="_blank">
+                  <svg class="icon icon-linkedin">
+                    <use xlink:href="images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
+          </div>
+          <div class="subsribe-section">
+            <h3>Підпишіться на розсилку</h3>
+            <form class="subsribe-form">
+              <input
+                type="email"
+                name="email"
+                class="subscribe-input"
+                placeholder="Email"
+              />
+              <button class="subcribe-btn" type="submit">
+                <span> Підписатися </span>
+                <svg class="icon icon-send">
+                  <use xlink:href="images/icon.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </form>
           </div>
         </div>
       </footer>
