--- a/portfolio.html
+++ b/portfolio.html
@@ -334,9 +334,11 @@
           <div class="subsribe-section">
             <h3>Підпишіться на розсилку</h3>
             <form class="subsribe-form">
+              <label for="email" hidden></label>
               <input
                 type="email"
                 name="email"
+                id="email"
                 class="subscribe-input"
                 placeholder="Email"
               />
