--- a/index.html
+++ b/index.html
@@ -529,11 +529,11 @@
           <div class="subsribe-section">
             <h3>Підпишіться на розсилку</h3>
             <form class="subsribe-form">
-              <label for="email" hidden></label>
+              <label for="email-footer" hidden></label>
               <input
                 type="email"
                 name="email"
-                id="email"
+                id="email-footer"
                 class="subscribe-input"
                 placeholder="Email"
               />
