--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,7 @@
           </div>
         </div>
       </header>
+      <!-- SECTION PORTFOLIO -->
       <main>
         <section class="section--portfolio">
           <div class="container">
